gcc-defaults (1.70) UNRELEASED; urgency=low

  * /usr/share/gcj/debian_defaults: Remove alpha, arm, hppa from
    gcj_archs, remove alpha from gcj_native_archs, add armel to
    gcj_archs and gcj_native_archs.

 -- Matthias Klose <doko@debian.org>  Tue, 08 Apr 2008 15:56:29 +0200

gcc-defaults (1.69) unstable; urgency=low

  [Arthur Loiret]
  * Build gcc-spu, g++-spu, gfortran-spu packages, defaulted to GCC-4.3.
  * Fix sh3, sh4 binary package generation.

 -- Matthias Klose <doko@debian.org>  Wed, 02 Apr 2008 01:44:48 +0200

gcc-defaults (1.68) unstable; urgency=low

  * gfortran: Restore the gfortran library symlinks on alpha, amd64, i386, hppa.

 -- Matthias Klose <doko@debian.org>  Sun, 30 Mar 2008 19:21:50 +0200

gcc-defaults (1.67) unstable; urgency=medium

  * Add build-dependency on gnat-4.3-base.
  * Don't build the g77 package anymore, remove build dependency on
    gcc-3.4-base.
  * Update README for Lenny.
  * Make gnat-4.2 the default on alpha, mips and mipsel. The Debian
    patches are not yet ported for these architectures (keep 4.3-x
    version numbers for gnat, libgnatvsn-dev, libgnatprj-dev). Add
    build dependency on gnat-4.2-base for these architectures.
  * Tighten versions and dependencies for the gnat packages to the
    final 4.3.0 release.

 -- Matthias Klose <doko@debian.org>  Sun, 30 Mar 2008 15:07:31 +0200

gcc-defaults (1.66) unstable; urgency=low

  [Arthur Loiret]
  * Build multilib packages for mips and mipsel.

  [Matthias Klose]
  * Make GCC-4.3 the default on all architectures except alpha, amd64,
    hppa, i386.
    - alpha and hppa show regressions in the glibc testsuite.
    - amd64 and i386 have a patch in debian not supported upstream, and
      changing code generation.

 -- Matthias Klose <doko@debian.org>  Sun, 23 Mar 2008 18:24:47 +0100

gcc-defaults (1.64) unstable; urgency=low

  [Matthias Klose]
  * gcc: Remove dangling FAQ symlink. Closes: #453812.
  * gij: Update conflict with java-gcj-compat,